--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 							</div>
 
 							<div id="thankyou" class="col-12">
-								<input type="hidden" name="_next" value="https://https://know-harishthakur.herokuapp.com//thanks.html">
+								<input type="hidden" name="_next" value="https://know-harishthakur.herokuapp.com///thanks.html">
 							</div>
 							<div class="col-12">
 								<ul class="actions special">
