--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 									<li style="padding-bottom:0.5em">separate page for admin and customer.</li>
 									<li style="padding-bottom:1.5em">update customer info, create orders and delete completed orders.</li>
 								</ul>
+								<p><strong>login with username: rishithakur, password: anjali445</strong></p>
 							</DIV>
 							<ul class="actions special">
 								<li><a href="https://rishicrm.herokuapp.com/" class="button">Have a look</a></li>
